2000-07-11  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (setup_font_size_option_menu): added font size option
	menu + another one insertion style changed cb

2000-07-10  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (toolbar_setup): it now adds some commands to uih toolbar
	(toolbar_style): old one toolbar is created here, also uses hbox,
	so it doesn't eat all space
	- removed ToolbarData structure, store this info in ControlData
	- update all callbacks to use ControlData
	- add Undo/Redo to toolbar

	* test-html-editor-control.c (container_create): create toolbar here

2000-07-10  Larry Ewing  <lewing@helixcode.com>

	* editor-control-factory.c (release): initialize the default
	edit property type.

2000-07-08  Dan Winship  <danw@helixcode.com>

	* menubar.c (menubar_setup): Redo this a bit so it will use the
	container's existing "Edit" menu rather than creating its own new
	one. (So that it ends up ordered correctly.)

2000-07-07  Radek Doulik  <rodo@helixcode.com>

	* body.c (body_apply_cb): implemented bg pixmap setting

	* toolbar.c (setup_color_option_menu): set relief for color
	selection combo on toolbar by gnome preferences

2000-07-06  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (color_changed_cb): added signal hadler for
	insertion_color_changed signal

	* main.c (main): call gconf_init here instead of gtkhtmllib_init

	* toolbar.c (setup_color_option_menu): new function
	add color selection to toolbar
	
	* body.c (body_properties): use color_table_new

	* text.c (text_properties): use color_table_new

	* utils.c: new file
	(color_table_new): new helper function for color table creation

	* utils.h: new file

	* image.c (insert_or_apply): new helper function
	(image_apply_cb): use insert_or_apply
	(image_insert_cb): likewise

2000-07-05  Radek Doulik  <rodo@helixcode.com>

	* properties.c (gtk_html_edit_properties_dialog_new): added insert
	parameter, which tells if we want insertion or properties dialog
